--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "scripts": {
     "start": "node 2_app.js",
-    "dev": "nodeman app.js"
+    "dev": "nodeman 2_app.js"
   },
   "name": "express",
   "version": "1.0.0",
