--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "dependencies": {
     "express": "^4.18.2",
+    "mongoose": "^8.2.0",
     "morgan": "^1.10.0"
   },
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon apps.js"
+    "start": "node user1.js",
+    "dev": "nodemon user1.js"
   },
   "name": "express",
   "version": "1.0.0",
