--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "morgan": "^1.10.0"
   },
   "scripts": {
-    "start": "node user1.js",
-    "dev": "nodemon user1.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "name": "express",
   "version": "1.0.0",
