--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
@@ -9,7 +10,7 @@
     "multer": "^1.4.5-lts.1"
   },
   "scripts": {
-    "start": "node app.js",
+    "start": "server.js",
     "dev": "nodemon app.js"
   },
   "name": "express",
